feat: show all summarized events on homepage
